Service Worker process should not be selected to open WebView on it https://bugs.webkit.org/show_bug.cgi?id=178527

Patch by Youenn Fablet <youenn@apple.com> on 2017-10-19
Reviewed by Chris Dumez.

Selection of process to open a page will no longer use an existing web process if it is the service worker process.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createNewWebProcessRespectingProcessCountLimit):

Canonical link: https://commits.webkit.org/194729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223713 268f45cc-cd09-0410-ab3c-d52691b4dbfc